chose another compendium. again.

--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -1,18 +1,18 @@
-.animal-list {
+.pokemon-list {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
 }
 
-.animal-list span {
+.pokemon-list span {
   display: flex;
   flex-direction: column;
   margin: 20px;
   align-items: center;
 }
 
-.animal-list img {
+.pokemon-list img {
   width: 450px;
   height: 450px;
   object-fit: cover;
