--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -3,17 +3,21 @@
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
+  padding-top: 120px;
 }
 
 .pokemon-list span {
   display: flex;
   flex-direction: column;
   margin: 20px;
-  align-items: center;
+}
+
+.pokemon-list span:hover {
+  background-color: red;
 }
 
 .pokemon-list img {
-  width: 450px;
-  height: 450px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
 }
