--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,8 +6,9 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: #020202;
+  background-color: #121212;
   color: #fefefe;
+  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 }
 
 .header h1 {
@@ -21,5 +22,5 @@
 }
 
 .header h1:hover {
-  color: red;
+  color: #bb4430;
 }
