--- a/src/components/VillagerList/VillagerList.css
+++ b/src/components/VillagerList/VillagerList.css
@@ -1,4 +1,4 @@
-.pokemon-list {
+.villager-list {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
@@ -6,18 +6,13 @@
   padding-top: 120px;
 }
 
-.pokemon-list span {
+.villager-list span {
   display: flex;
   flex-direction: column;
   margin: 20px;
 }
 
-.pokemon-list img {
-  width: 300px;
-  height: 300px;
-}
-
-.pokemon-list img:hover {
+.villager-list img:hover {
   filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
   transform: translateY(-10px);
 }
