--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&family=Roboto:wght@100;300&display=swap');
 
 body {
-  background-color: #272727;
+  background-color: #fff4eb;
   font-family: 'Roboto Mono', sans-serif;
 }
 
