--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,13 +2,9 @@
   display: flex;
   margin: auto;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #121212;
+  background-color: #7fb285;
   color: #fefefe;
-  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.5));
 }
 
 .header h1 {
