--- a/src/components/VillagerList/VillagerList.css
+++ b/src/components/VillagerList/VillagerList.css
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
-  padding-top: 120px;
 }
 
 .villager-list span {
@@ -12,7 +11,10 @@
   margin: 20px;
 }
 
+.villager-list img {
+  filter: drop-shadow(0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.5));
+}
 .villager-list img:hover {
-  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(0.35rem 0.35rem 0.2rem rgba(0, 0, 0, 0.5));
   transform: translateY(-10px);
 }
